Your commit message

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,10 @@ coverage/
 
 # DynamoDB Local files
 .dynamodb/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
